# bovada-rs

./: .gitignore  Cargo.toml  README.md
assets/: index.html
frontend/: package-lock.json  package.json  server.mjs
frontend/static/: index.html
scripts/: extract.js  extract.py  extract.sh  generate.sh  plot-american.gp  plot-american.sh  plot-implied.gp  plot-implied.sh  plot.gp  plot.sh  scrape.sh
src/: bovada.rs  event_type.rs  main.rs  structs.rs  utilities.rs  ws_error.rs
