[package]
name = "bovada-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# json
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
# uuid
uuid = { version = "1.4.1", features = ["v4"] }
# websocket
websocket-lite = { git = "https://github.com/brandonros/rust-websocket-lite.git", features = ["ssl-native-tls"] }
# http client
reqwest = { version = "0.11" }
# async
futures = "0.3.28"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.32.0", features = ["rt", "macros"] }
dotenv = "0.15.0"
